--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,6 @@
 #nav {
 	width: 100%;
+	margin-bottom: -4px;
 }
 
 #photo-wheel {
@@ -18,7 +19,7 @@
 	display: flex;
 	justify-content: center;
 	position: relative;
-	margin-top: 80px;
+	margin-top: 30px;
 }
 
 #sb-app {
@@ -29,10 +30,11 @@
 
 #grey {
   width: 100%;
+  position: absolute;
   background-color: rgb(245,245,245);
-  height: 517px;
+  height: 418px;
   border-bottom: 1px solid rgb(220,220,220); 
-  z-index: -1;
+  z-index: -2;
 }
 
 body {
